--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "private": false,
   "scripts": {
     "start": "nodemon app.ts",
-    "build": "tsc --project ./"
+    "build": "tsc --project ./",
+    "test": "ts-node src/service/game.service.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "chess.js": "^0.11.0",
+    "express": "^4.17.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
+    "@types/chess.js": "^0.10.1",
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.6",
     "nodemon": "^2.0.6",
