--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chess.js": "^0.11.0",
     "express": "^4.17.1",
+    "sequelize": "^6.3.5",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
