--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "chess.js": "^0.11.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
-    "uuid": "^8.3.1"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
