--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "test": "ts-node src/dao/player.dao.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "chess.js": "^0.11.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
+    "@types/bcrypt": "^3.0.0",
+    "@types/body-parser": "^1.19.0",
     "@types/chess.js": "^0.10.1",
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.6",
+    "@types/zxcvbn": "^4.4.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
