--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "chess.js": "^0.11.0",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.4",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "zxcvbn": "^4.4.2"
