--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.8",
+    "@types/node-cron": "^2.0.3",
     "ajv": "^7.0.0-beta.3",
     "ajv-formats": "^0.4.0",
     "bcrypt": "^5.0.0",
@@ -23,6 +24,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "node-cron": "^2.0.3",
     "sequelize": "^6.3.5",
     "zxcvbn": "^4.4.2"
   },
