--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.2.0",
     "mysql2": "^2.2.5",
     "node-cron": "^2.0.3",
     "sequelize": "^6.3.5",
