--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-session-sequelize": "^7.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
     "mysql2": "^2.2.5",
