--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/chess.js": "^0.10.1",
     "@types/express": "^4.17.8",
+    "@types/express-rate-limit": "^5.1.0",
     "@types/express-session": "^1.17.2",
     "@types/node": "^14.14.6",
     "@types/zxcvbn": "^4.4.0",
