add https endpoint for production

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {
     "start": "nodemon --exec ts-node -T app.ts",
-    "build": "tsc --project ./",
+    "build": "tsc --project ./ --outDir build",
     "test": "ts-node example.chess.ts"
   },
   "dependencies": {
