--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
   "scripts": {
     "start": "nodemon --exec ts-node -T app.ts",
     "build": "tsc --project ./ --outDir build",
-    "test": "ts-node example.chess.ts"
+    "test": "jest"
   },
   "dependencies": {
-    "@types/cors": "^2.8.8",
-    "@types/node-cron": "^2.0.3",
     "ajv": "^7.0.0-beta.3",
-    "ajv-formats": "^0.4.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "chess.js": "^0.11.0",
@@ -35,12 +32,19 @@
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/chess.js": "^0.10.1",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/express-rate-limit": "^5.1.0",
     "@types/express-session": "^1.17.2",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/node-cron": "^2.0.3",
+    "@types/supertest": "^2.0.10",
     "@types/zxcvbn": "^4.4.0",
+    "babel-jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "safe-regex": "^2.1.1",
+    "supertest": "^6.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
