--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^4.2.0",
     "mysql2": "^2.2.5",
     "node-cron": "^2.0.3",
+    "rate-limiter-flexible": "^2.1.13",
     "sequelize": "^6.3.5",
     "zxcvbn": "^4.4.2"
   },
